tidy up MC distance

--- a/notebooks/other_notebooks/monte_carlo_errors.ipynb
+++ b/notebooks/other_notebooks/monte_carlo_errors.ipynb
@@ -67,6 +67,7 @@
     "import miscellaneous_functions as MF\n",
     "import compute_variables as CV\n",
     "import map_functions as mapf\n",
+    "from errorconfig import MonteCarloConfig,BootstrapConfig\n",
     "import load_sim\n",
     "import load_data"
    ]
@@ -75,6 +76,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.rcParams[\"font.size\"] = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,31 +101,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
     "degree_symbol = \"^\\circ\"\n",
     "\n",
     "symbol_dict = mapf.get_kinematic_symbols_dict(x_variable=x_variable,\n",
-    "                                                         y_variable=y_variable,\n",
-    "                                                         vel_x_variable=vel_x_variable,\n",
-    "                                                         vel_y_variable=vel_y_variable)\n",
+    "                                             y_variable=y_variable,\n",
+    "                                             vel_x_variable=vel_x_variable,\n",
+    "                                             vel_y_variable=vel_y_variable)\n",
     "\n",
-    "units_dict = mapf.get_kinematic_units_dict(position_variables=x_variable+y_variable,\n",
-    "                                                     vel_x_variable=vel_x_variable,\n",
-    "                                                     vel_y_variable=vel_y_variable,\n",
-    "                                                     degree_symbol=degree_symbol)\n",
+    "units_dict = mapf.get_kinematic_units_dict(degree_symbol=degree_symbol)\n",
     "\n",
     "pos_symbols_dict,pos_units_dict = mapf.get_position_symbols_and_units_dict(degree_symbol=r\"$%s$\"%degree_symbol)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7",
-   "metadata": {},
-   "source": [
-    "# Load"
    ]
   },
   {
@@ -134,6 +134,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_save_path(perturbed_var, data_bool):\n",
+    "    \n",
+    "    save_path = general_path + f\"graphs/other_plots/MonteCarlo/{perturbed_var}/\"\n",
+    "    MF.create_dir(save_path)\n",
+    "\n",
+    "    save_path += \"data/\" if data_bool else \"model/\"\n",
+    "    MF.create_dir(save_path)\n",
+    "    \n",
+    "    return save_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "# Load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "zabs = True\n",
     "# zabs = False\n",
     "\n",
@@ -145,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "12",
    "metadata": {},
    "source": [
     "## Sim"
@@ -154,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "source": [
     "## Data"
@@ -199,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,8 +249,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_trim = data[data[\"FeH\"]>-1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "19",
    "metadata": {},
    "source": [
     "# Other plots"
@@ -232,52 +268,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
-   "metadata": {},
-   "source": [
-    "## Data d_error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax=plt.subplots()\n",
-    "ax.hist(data_trim[\"d_error\"],bins=100)\n",
-    "ax.axvline(data_trim[\"d_error\"].median(),label=f\"Median: {str(MF.return_int_or_dec(data_trim['d_error'].median(),2))}\",color=\"red\")\n",
-    "ax.set_xlabel(\"Distance uncertainty [kpc]\")\n",
-    "ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
-    "ax.legend()\n",
-    "plt.savefig(\"/Users/luismi/Desktop/MRes_UCLan/graphs/other_plots/MC_distance/data/d_uncertainty_hist.png\",dpi=100,bbox_inches=\"tight\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax=plt.subplots()\n",
-    "ax.hist(data_trim[\"d_error\"]/data_trim[\"d\"],bins=100)\n",
-    "ax.axvline((data_trim[\"d_error\"]/data_trim[\"d\"]).median(),label=f\"Median: {str(100*MF.return_int_or_dec((data_trim['d_error']/data_trim['d']).median(),3))}%\",color=\"red\")\n",
-    "ax.set_xlabel(\"Distance fractional uncertainty\")\n",
-    "ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
-    "ax.legend()\n",
-    "plt.savefig(\"/Users/luismi/Desktop/MRes_UCLan/graphs/other_plots/MC_distance/data/d_frac_uncertainty_hist.png\",dpi=100,bbox_inches=\"tight\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "20",
    "metadata": {},
    "source": [
-    "# Compute"
+    "# Distance"
    ]
   },
   {
@@ -287,11 +281,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_bool = True\n",
-    "data_bool = False\n",
-    "\n",
-    "# frac_error = True if not data_bool else True\n",
-    "frac_error = True if not data_bool else False"
+    "data_bool = True\n",
+    "# data_bool = False"
    ]
   },
   {
@@ -301,11 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = general_path + \"graphs/other_plots/MC_distance/\"\n",
-    "MF.create_dir(save_path)\n",
-    "\n",
-    "save_path += \"data/\" if data_bool else \"model/\"\n",
-    "MF.create_dir(save_path)\n",
+    "save_path = get_save_path(perturbed_var=\"distance\",data_bool=data_bool)\n",
     "\n",
     "print(save_path)"
    ]
@@ -317,15 +304,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if data_bool:\n",
-    "    cuts_dict = {\"FeH\":[-1,2], \"l\":[-2,2],\"R\":[0,5]}\n",
-    "else:\n",
-    "#     cuts_dict={\"age\":[0,4],\"R\":[0,5],\"l\":[-2,2],\"b\":[0,0.01]} # nuclear disc\n",
-    "#     cuts_dict={\"age\":[4,7],\"R\":[0,],\"l\":[-2,2],\"b\":[3.5,4]} # young pop\n",
-    "        cuts_dict={\"age\":[4,7],\"l\":[-2,2],\"b\":[3.5,4]} # young pop no R cut\n",
-    "\n",
-    "df = MF.apply_cuts_to_df(data if data_bool else df0, cuts_dict=cuts_dict)\n",
-    "print(len(df),\"stars\")"
+    "# d_frac_error = 0.1\n",
+    "d_frac_error = 0.2\n",
+    "# d_frac_error = None"
    ]
   },
   {
@@ -335,21 +316,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if frac_error:\n",
-    "    d_frac_error = 0.2\n",
-    "    \n",
-    "    df[\"d_error\"] = df[\"d\"]*d_frac_error\n",
-    "    \n",
-    "    print(f\"Working with {d_frac_error} fractional distance error\")\n",
+    "if data_bool:\n",
+    "    cuts_dict = {\"FeH\":[-1,0.61], \"l\":[-2,2],\"R\":[0,3.5]}\n",
     "else:\n",
-    "    assert \"d_error\" in df, \"If not working with frac error, then 'd_error' must be already exist (did you mean to set data_bool to True?)\"\n",
-    "    print(\"Got the error from data\")"
+    "#     cuts_dict={\"age\":[0,4],\"R\":[0,5],\"l\":[-2,2],\"b\":[0,0.01], \"R\":[0,3.5]} # nuclear disc\n",
+    "#     cuts_dict={\"age\":[4,7],\"R\":[0,],\"l\":[-2,2],\"b\":[3.5,4], \"R\":[0,3.5]} # young pop\n",
+    "        cuts_dict={\"age\":[4,7],\"l\":[-2,2],\"b\":[3.5,4], \"R\":[0,3.5]} # young pop no R cut"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = MF.apply_cuts_to_df(data if data_bool else df0, cuts_dict=cuts_dict)\n",
+    "df = MF.apply_cuts_to_df(data_trim if data_bool else df0, cuts_dict=cuts_dict)\n",
+    "print(len(df),\"stars\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,32 +361,8 @@
     "\n",
     "func = funcs_dict[func_name]\n",
     "\n",
-    "Rmax_MC = 3.5\n",
-    "originally_within_Rmax = df[\"R\"]<=Rmax_MC\n",
-    "\n",
-    "df_within_lim = df[originally_within_Rmax]\n",
-    "print(f\"Total: {len(df)}. Within R≤3.5 lim: {len(df_within_lim)}\\n\")\n",
-    "\n",
-    "true_value = func(vx=df_within_lim[\"vr\"],vy=df_within_lim[\"vl\"])\n",
-    "print(f\"{func_name} true value: {true_value}\")\n",
-    "\n",
-    "repeat = 5000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "std_MC, MC_values, within_Rmax = CV.get_std_MC(function=func,df=df,Rmax=Rmax_MC,repeat=repeat)\n",
-    "\n",
-    "std_boot, boot_vals = CV.get_std_bootstrap(function=func,vx=df_within_lim[\"vr\"].values,vy=df_within_lim[\"vl\"].values,repeat=repeat)\n",
-    "\n",
-    "print(f\"Mean\\t MC: {np.mean(MC_values)}. Boot: {np.mean(boot_vals)}\")\n",
-    "print(f\"Median\\t MC: {np.median(MC_values)}. Boot: {np.median(boot_vals)}\")\n",
-    "print(f\"Std\\t MC: {std_MC}. Boot: {std_boot}\")"
+    "true_value = func(vx=df[\"vr\"],vy=df[\"vl\"])\n",
+    "print(f\"{func_name} true value: {true_value}\")"
    ]
   },
   {
@@ -406,8 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save_bool = True\n",
-    "save_bool = False"
+    "repeats = 5000"
    ]
   },
   {
@@ -417,11 +382,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams[\"font.size\"] = 20\n",
+    "montecarloconfig = MonteCarloConfig(perturbed_var=\"d\",affected_cuts_dict={\"R\":[0,3.5]},error_frac=d_frac_error,repeats=repeats)\n",
     "\n",
+    "bootstrapconfig = BootstrapConfig(repeats=repeats,symmetric=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_errors = MF.apply_cuts_to_df(data if data_bool else df0, cuts_dict=montecarloconfig.clean_value_cuts_dict(cuts_dict))\n",
+    "print(len(df_errors),\"stars for MC error estimation\")\n",
+    "\n",
+    "originally_within_Rmax = df_errors[\"R\"] <= 3.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std_MC_low,std_MC_high, MC_values, within_Rmax = CV.get_std_MC(function=func,df=df_errors,montecarloconfig=montecarloconfig,true_value=true_value,\\\n",
+    "                                                               vel_x_var=\"r\",vel_y_var=\"l\")\n",
+    "\n",
+    "std_boot,_,boot_vals = CV.get_std_bootstrap(function=func,vx=df.vr.values,vy=df.vl.values,bootstrapconfig=bootstrapconfig)\n",
+    "\n",
+    "print(f\"Mean\\t MC: {np.mean(MC_values)}. Boot: {np.mean(boot_vals)}\")\n",
+    "print(f\"Median\\t MC: {np.median(MC_values)}. Boot: {np.median(boot_vals)}\")\n",
+    "print(f\"Std\\t MC low,high: {std_MC_low},{std_MC_high}. Boot: {std_boot}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_bool = True\n",
+    "# save_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig,ax=plt.subplots()\n",
-    "ax.hist(MC_values,bins=50,color=\"blue\",alpha=0.7,label=fr\"MC values ($R={repeat}$)\")\n",
-    "ax.hist(boot_vals,bins=50,color=\"green\",alpha=0.5, label=fr\"Bootstrap values ($R={repeat}$)\")\n",
+    "ax.hist(MC_values,bins=50,color=\"blue\",alpha=0.7,label=fr\"MC values ($R={repeats}$)\")\n",
+    "ax.hist(boot_vals,bins=50,color=\"green\",alpha=0.5, label=fr\"Bootstrap values ($R={repeats}$)\")\n",
     "ax.axvline(true_value,color=\"red\",label=\"True value\")\n",
     "ax.set_xlabel(symbol_dict[func_name]); ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
     "ax.legend()\n",
@@ -429,12 +445,11 @@
     "if True:\n",
     "    filename = func_name\n",
     "    \n",
-    "    if not frac_error:\n",
-    "        filename += \"dataErr/\"\n",
-    "    \n",
-    "    filename += f\"_{d_frac_error}fracErr\"\n",
+    "    filename += f\"_{d_frac_error}fracErr\" if d_frac_error is not None else \"_dataErr\"\n",
     "    \n",
     "    filename += \"_\" + MF.extract_str_from_cuts_dict(cuts_dict)\n",
+    "    \n",
+    "    filename += f\"_{repeats}repeats\"\n",
     "    \n",
     "    print(filename)\n",
     "    \n",
@@ -447,7 +462,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_bool = True\n",
+    "# save_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +494,7 @@
     "    for k in elements_dic:\n",
     "        condition,size,color,lw,edgecolor = elements_dic[k]\n",
     "\n",
-    "        ax.scatter(x=df[condition][\"R\"], y=df[condition][y_var], color=color, s=size, label=f\"{k} ({sum(condition)})\",lw=lw,edgecolor=edgecolor)\n",
+    "        ax.scatter(x=df_errors[condition][\"R\"], y=df_errors[condition][y_var], color=color, s=size, label=f\"{k} ({sum(condition)})\",lw=lw,edgecolor=edgecolor)\n",
     "\n",
     "    ax.axvline(x=3.5,color=\"grey\",lw=1,linestyle=\"--\")\n",
     "    ax.text(x=3.5+0.1,y=0.85*ax.get_ylim()[1], s=r\"$R=3.5~$kpc\",color=\"grey\",size=15)\n",
@@ -482,7 +508,7 @@
     "             \n",
     "if True: # filename and save\n",
     "    filename = f\"{y_var}-R\"\n",
-    "    filename += f\"_{d_frac_error}fracErr\"\n",
+    "    filename += f\"_{d_frac_error}fracErr\" if d_frac_error is not None else \"_dataErr\"\n",
     "    filename += \"_\" + MF.extract_str_from_cuts_dict(cuts_dict)\n",
     "\n",
     "    print(filename)\n",
@@ -497,29 +523,100 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_bool = True\n",
+    "# save_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig,ax=plt.subplots()\n",
     "\n",
-    "MC_d = np.random.normal(loc=df[\"d\"],scale=df[\"d_error\"]) # this is an example - in the std calculation this is calculated {repeat} number of times\n",
+    "MC_d = np.random.normal(loc=df_errors[\"d\"],scale=df_errors[\"d_error\"] if \"d_error\" in df_errors else d_frac_error*df_errors[\"d\"]) # this is an example - in the std calculation this is calculated {repeats} number of times\n",
     "\n",
     "ax.hist(MC_d,bins=100,label=r\"MC $d$\")\n",
-    "ax.hist(df[\"d\"],bins=100,color=\"red\",alpha=0.4,label=r\"Original $d$\")\n",
-    "ax.hist(MC_d-df[\"d\"],bins=100,color=\"k\",histtype=\"step\",label=\"Difference\")\n",
+    "ax.hist(df_errors[\"d\"],bins=100,color=\"red\",alpha=0.4,label=r\"Original $d$\")\n",
+    "ax.hist(MC_d-df_errors[\"d\"],bins=100,color=\"k\",histtype=\"step\",label=\"Difference\")\n",
     "ax.set_xlabel(r\"$d$ [kpc]\"); ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
     "ax.legend()\n",
+    "\n",
+    "if True:\n",
+    "    filename = \"dHists\"\n",
+    "    filename += f\"_{d_frac_error}fracErr\" if d_frac_error is not None else \"_dataErr\"\n",
+    "    filename += \"_\" + MF.extract_str_from_cuts_dict(cuts_dict)\n",
+    "    \n",
+    "    print(filename)\n",
+    "    \n",
+    "    if save_bool:\n",
+    "        plt.savefig(save_path+filename+\".png\", bbox_inches=\"tight\")\n",
+    "        print(\"Saved in\",save_path)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_bool = True\n",
+    "# save_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "ax.hist(data_trim[\"d_error\"],bins=100)\n",
+    "ax.axvline(data_trim[\"d_error\"].median(),label=f\"Median: {str(MF.return_int_or_dec(data_trim['d_error'].median(),2))}\",color=\"red\")\n",
+    "ax.set_xlabel(\"Distance uncertainty [kpc]\")\n",
+    "ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
+    "ax.legend()\n",
+    "if save_bool:\n",
+    "    plt.savefig(\"/Users/luismi/Desktop/MRes_UCLan/graphs/other_plots/MC_distance/data/d_uncertainty_hist.png\",dpi=100,bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "40",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "save_bool = True\n",
+    "# save_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "ax.hist(data_trim[\"d_error\"]/data_trim[\"d\"],bins=100)\n",
+    "ax.axvline((data_trim[\"d_error\"]/data_trim[\"d\"]).median(),label=f\"Median: {str(100*MF.return_int_or_dec((data_trim['d_error']/data_trim['d']).median(),3))}%\",color=\"red\")\n",
+    "ax.set_xlabel(\"Distance fractional uncertainty\")\n",
+    "ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
+    "ax.legend()\n",
+    "plt.savefig(\"/Users/luismi/Desktop/MRes_UCLan/graphs/other_plots/MC_distance/data/d_frac_uncertainty_hist.png\",dpi=100,bbox_inches=\"tight\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
