compute_errors import

--- a/notebooks/Individual_variables.ipynb
+++ b/notebooks/Individual_variables.ipynb
@@ -65,6 +65,7 @@
    "outputs": [],
    "source": [
     "import compute_variables as CV\n",
+    "import compute_errors as CE\n",
     "import miscellaneous_functions as MF\n",
     "import mixed_plots as MP\n",
     "import plotting_helpers as PH\n",
@@ -5982,9 +5983,9 @@
     "vy = data_bulge_poor.vl.values\n",
     "\n",
     "# val = CV.calculate_tilt(vx,vy,absolute=True)\n",
-    "# err = CV.get_std_bootstrap(vx,vy,CV.calculate_tilt,tilt=True,absolute=True)\n",
+    "# err = CE.get_std_bootstrap(vx,vy,CV.calculate_tilt,tilt=True,absolute=True)\n",
     "val = CV.calculate_correlation(vx,vy)\n",
-    "err = CV.get_std_bootstrap(vx,vy,CV.calculate_correlation)\n",
+    "err = CE.get_std_bootstrap(vx,vy,CV.calculate_correlation)\n",
     "\n",
     "print(r\"%.2f +- %.2f\"%(val,err))"
    ]
