--- a/notebooks/Observational_maps.ipynb
+++ b/notebooks/Observational_maps.ipynb
@@ -49,7 +49,6 @@
     "import matplotlib.gridspec as gridspec\n",
     "import matplotlib.ticker as ticker\n",
     "import matplotlib.cm as cm\n",
-    "import matplotlib.path as mpltPath\n",
     "from matplotlib import colormaps as mplcmaps\n",
     "\n",
     "from matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
@@ -63,10 +62,10 @@
    "outputs": [],
    "source": [
     "import compute_variables as CV\n",
+    "import compute_errors as CE\n",
     "import miscellaneous_functions as MF\n",
     "import mixed_plots as MP\n",
     "import plotting_helpers as PH\n",
-    "import ellipse_functions as EF\n",
     "import load_data\n",
     "import map_functions as mapf\n",
     "\n",
@@ -1069,12 +1068,12 @@
     "    return CV.calculate_tilt(df[kws[\"vx\"]].values,df[kws[\"vy\"]].values,absolute=True)\n",
     "\n",
     "def compute_error(df, **kws):\n",
-    "    return CV.get_std_bootstrap(vx=df[kws[\"vx\"]].values,vy=df[kws[\"vy\"]].values, function=kws[\"function\"], tilt=kws[\"tilt\"], absolute=kws[\"absolute\"], repeat=kws[\"repeat\"])\n",
+    "    return CE.get_std_bootstrap(vx=df[kws[\"vx\"]].values,vy=df[kws[\"vy\"]].values, function=kws[\"function\"], tilt=kws[\"tilt\"], absolute=kws[\"absolute\"], repeat=kws[\"repeat\"])\n",
     "\n",
     "def compute_fractional_error(df, **kws):\n",
     "    function = kws[\"function\"]\n",
     "    \n",
-    "    error = CV.get_std_bootstrap(vx=df[kws[\"vx\"]].values,vy=df[kws[\"vy\"]].values, function=function, tilt=kws[\"tilt\"], absolute=kws[\"absolute\"], repeat=kws[\"repeat\"])\n",
+    "    error = CE.get_std_bootstrap(vx=df[kws[\"vx\"]].values,vy=df[kws[\"vy\"]].values, function=function, tilt=kws[\"tilt\"], absolute=kws[\"absolute\"], repeat=kws[\"repeat\"])\n",
     "    value = function(df[kws[\"vx\"]].values,df[kws[\"vy\"]].values)\n",
     "    \n",
     "    return error/abs(value)"
