--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -47,11 +47,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
-    "from matplotlib.colors import LogNorm\n",
     "import matplotlib.ticker as ticker\n",
-    "from matplotlib import colormaps as mplcmaps\n",
-    "import matplotlib.cm as cm\n",
     "\n",
     "from matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
     "set_matplotlib_params()"
@@ -66,8 +62,9 @@
    "source": [
     "import miscellaneous_functions as MF\n",
     "import compute_variables as CV\n",
+    "import compute_errors as CE\n",
     "import map_functions as mapf\n",
-    "import mixed_plots as MP\n",
+    "import coordinates\n",
     "from errorconfig import MonteCarloConfig,BootstrapConfig\n",
     "import load_sim\n",
     "import load_data"
@@ -605,10 +602,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std_MC_low,std_MC_high, MC_values, within_cut = CV.get_std_MC(function=func,df=df_errors,montecarloconfig=montecarloconfig,true_value=true_value,\\\n",
+    "std_MC_low,std_MC_high, MC_values, within_cut = CE.get_std_MC(function=func,df=df_errors,montecarloconfig=montecarloconfig,true_value=true_value,\\\n",
     "                                                               vel_x_var=vel_x_var,vel_y_var=vel_y_var)\n",
     "\n",
-    "std_boot,_,boot_vals = CV.get_std_bootstrap(function=func,vx=df[f\"v{vel_x_var}\"].values,vy=df[f\"v{vel_y_var}\"].values,bootstrapconfig=bootstrapconfig)\n",
+    "std_boot,_,boot_vals = CE.get_std_bootstrap(function=func,vx=df[f\"v{vel_x_var}\"].values,vy=df[f\"v{vel_y_var}\"].values,bootstrapconfig=bootstrapconfig)\n",
     "\n",
     "print(f\"Mean\\t MC: {np.mean(MC_values)}. Boot: {np.mean(boot_vals)}\")\n",
     "print(f\"Median\\t MC: {np.median(MC_values)}. Boot: {np.median(boot_vals)}\")\n",
@@ -882,7 +879,7 @@
     "    errors_high = np.empty_like(sampling_sizes,dtype=float)\n",
     "\n",
     "    for s,size in enumerate(sampling_sizes):\n",
-    "        errors_low[s],errors_high[s],values = CV.get_std_bootstrap(function=function,vx=df.vr.values,vy=df.vl.values,\\\n",
+    "        errors_low[s],errors_high[s],values = CE.get_std_bootstrap(function=function,vx=df.vr.values,vy=df.vl.values,\\\n",
     "                                     bootstrapconfig=BootstrapConfig(bootstrap_size=size,replacement=replacement,symmetric=symmetric,repeats=repeat))\n",
     "        \n",
     "        if verbose:\n",
@@ -1332,7 +1329,7 @@
     "    ax.fill_between(bootstrap_sizes,y1=true_value-errors_low,y2=true_value+errors_high)\n",
     "    ax.hlines(y=true_value,xmin=min(bootstrap_sizes),xmax=max(bootstrap_sizes),color=\"blue\",label=\"True value\")\n",
     "\n",
-    "    true_std_low,true_std_high,_ = CV.get_std_bootstrap(function=CV.calculate_correlation,vx=df.vr.values,vy=df.vl.values,\\\n",
+    "    true_std_low,true_std_high,_ = CE.get_std_bootstrap(function=CV.calculate_correlation,vx=df.vr.values,vy=df.vl.values,\\\n",
     "                                     bootstrapconfig=BootstrapConfig(symmetric=False))\n",
     "    ax.errorbar(x=5500,y=[true_value],yerr=[[true_std_low],[true_std_high]],color=\"blue\",capsize=5,label=\"True error\",linestyle=\"\")\n",
     "\n",
