clean errors notebook

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -132,9 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_save_path(perturbed_var, data_bool):\n",
+    "def get_save_path(perturbed_vars, data_bool):\n",
     "    \n",
-    "    save_path = general_path + f\"graphs/other_plots/MonteCarlo/{perturbed_var}/\"\n",
+    "    save_path = general_path + f\"graphs/other_plots/MonteCarlo/\" + str.join(\",\", perturbed_vars) + \"/\"\n",
     "    MF.create_dir(save_path)\n",
     "\n",
     "    save_path += \"data/\" if data_bool else \"model/\"\n",
@@ -247,19 +247,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "18",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df_helper = pd.DataFrame(data[[\"l\",\"b\"]])\n",
-    "\n",
-    "df_helper[\"pmlcosb\"] = data[\"vl\"]/data[\"d\"]\n",
-    "df_helper[\"pmb\"] = data[\"vb\"]/data[\"d\"]\n",
-    "\n",
-    "df_helper[\"pmlcosb\"] *= coordinates.get_conversion_factor_from_mas_per_yr_to_rad_per_s(inverse=True)/coordinates.get_conversion_factor_from_kpc_to_km()\n",
-    "df_helper[\"pmb\"] *= coordinates.get_conversion_factor_from_mas_per_yr_to_rad_per_s(inverse=True)/coordinates.get_conversion_factor_from_kpc_to_km()"
+    "# Data uncertainty histograms"
    ]
   },
   {
@@ -269,71 +261,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[[\"pmlcosb\",\"pmb\"]],df_helper[[\"pmlcosb\",\"pmb\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(data[\"pmlcosb\"] == df_helper[\"pmlcosb\"]).all(), (data[\"pmb\"] == df_helper[\"pmb\"]).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(data[\"pmlcosb\"] - df_helper[\"pmlcosb\"]).max(), (data[\"pmb\"] - df_helper[\"pmb\"]).max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coordinates.pmlpmb_to_pmrapmdec(df_helper)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[[\"pmra\",\"pmdec\"]],df_helper[[\"pmra\",\"pmdec\"]]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "24",
-   "metadata": {},
-   "source": [
-    "# Data Uncertainty plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "var = \"d\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "26",
    "metadata": {},
    "source": [
     "# MC"
@@ -465,24 +399,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_bool = True\n",
     "# data_bool = False\n",
     "\n",
-    "perturbed_var = \"pmra\""
+    "perturbed_vars = [\"d\",\"vr\",\"pmra\",\"pmdec\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = get_save_path(perturbed_var=perturbed_var,data_bool=data_bool)\n",
+    "save_path = get_save_path(perturbed_vars=perturbed_vars,data_bool=data_bool)\n",
     "\n",
     "print(save_path)"
    ]
@@ -490,19 +424,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
     "# frac_error = 0.1\n",
-    "# frac_error = 0.2\n",
-    "frac_error = None"
+    "frac_error = 0.2\n",
+    "# frac_error = None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,14 +445,14 @@
     "    cuts_dict = {\"FeH\":[-0.21,0.61], \"l\":[-2,2], \"R\":[0,3.5]}\n",
     "else:\n",
     "#     cuts_dict={\"age\":[0,4],\"R\":[0,5],\"l\":[-2,2],\"b\":[0,0.01], \"R\":[0,3.5]} # nuclear disc\n",
-    "#     cuts_dict={\"age\":[4,7],\"R\":[0,],\"l\":[-2,2],\"b\":[3.5,4], \"R\":[0,3.5]} # young pop\n",
-    "        cuts_dict={\"age\":[4,7],\"l\":[-2,2],\"b\":[3,6], \"R\":[0,3.5]} # young pop no R cut"
+    "    cuts_dict={\"age\":[4,7],\"l\":[-2,2],\"b\":[3.5,4], \"R\":[0,3.5]} # young pop\n",
+    "#         cuts_dict={\"age\":[4,7],\"l\":[-2,2],\"b\":[3,6], \"R\":[0,3.5]} # young pop no R cut"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,11 +494,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if perturbed_var == \"d\":\n",
+    "if \"d\" in perturbed_vars:\n",
     "    affected_cuts_dict = {\"R\":[0,3.5]}\n",
     "else:\n",
     "    affected_cuts_dict = {}\n",
@@ -575,11 +509,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "montecarloconfig = MonteCarloConfig(perturbed_var=perturbed_var,affected_cuts_dict=affected_cuts_dict,error_frac=frac_error,repeats=repeats)\n",
+    "montecarloconfig = MonteCarloConfig(perturbed_vars=perturbed_vars,affected_cuts_dict=affected_cuts_dict,error_frac=frac_error,repeats=repeats,symmetric=False)\n",
     "\n",
     "bootstrapconfig = BootstrapConfig(repeats=repeats,symmetric=True)"
    ]
@@ -587,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,12 +571,12 @@
     "\n",
     "if True: # boot & MC value hist\n",
     "    fig,ax=plt.subplots()\n",
-    "    if boot_hist_bool:\n",
-    "        ax.hist(boot_vals,bins=50,color=\"green\",alpha=0.5, label=fr\"Bootstrap values ($R={repeats}$)\")\n",
     "    if MC_bar_width is not None:\n",
     "        ax.hist(MC_values,bins=50,color=\"blue\",alpha=0.7,label=fr\"MC values ($R={repeats}$)\",width=MC_bar_width)\n",
-    "    else: # It doesn't like it if I pass width=None\n",
+    "    else: # It doesn't like it if I pass width=None and I couldn't find what the default is\n",
     "        ax.hist(MC_values,bins=50,color=\"blue\",alpha=0.7,label=fr\"MC values ($R={repeats}$)\")\n",
+    "    if boot_hist_bool:\n",
+    "        ax.hist(boot_vals,bins=50,color=\"green\",alpha=0.5, label=fr\"Bootstrap values ($R={repeats}$)\")\n",
     "    ax.axvline(true_value,color=\"red\",label=\"True value\")\n",
     "    ax.set_xlabel(symbol_dict[func_name]); ax.set_ylabel(r\"$N$\",rotation=0,labelpad=20)\n",
     "    ax.legend()\n",
@@ -664,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "40",
    "metadata": {},
    "source": [
     "## d-specific plots"
@@ -673,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52",
+   "id": "46",
    "metadata": {},
    "source": [
     "# Downsampling errors"
@@ -795,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53",
+   "id": "47",
    "metadata": {},
    "source": [
     "Loading from saved arrays"
@@ -804,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56",
+   "id": "50",
    "metadata": {},
    "source": [
     "Calculating here"
@@ -869,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64",
+   "id": "58",
    "metadata": {},
    "source": [
     "Symmetric"
@@ -1036,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72",
+   "id": "66",
    "metadata": {},
    "source": [
     "Asymmetric"
@@ -1316,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
