--- a/notebooks/Visualisation.ipynb
+++ b/notebooks/Visualisation.ipynb
@@ -13,7 +13,7 @@
     "%autoreload 2\n",
     "\n",
     "import sys\n",
-    "sys.path.append('../utils')"
+    "sys.path.append('../src')"
    ]
   },
   {
