--- a/notebooks/Individual_variables.ipynb
+++ b/notebooks/Individual_variables.ipynb
@@ -23,7 +23,7 @@
     "%autoreload 2\n",
     "\n",
     "import sys\n",
-    "sys.path.append('../utils/')"
+    "sys.path.append('../src/')"
    ]
   },
   {
