some re-structuring

--- a/notebooks/Individual_variables.ipynb
+++ b/notebooks/Individual_variables.ipynb
@@ -54,7 +54,7 @@
     "from matplotlib import colormaps as mplcmaps\n",
     "import matplotlib.cm as cm\n",
     "\n",
-    "from matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
+    "from plotting.matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
     "set_matplotlib_params()"
    ]
   },
@@ -66,14 +66,14 @@
    "source": [
     "import compute_variables as CV\n",
     "import compute_errors as CE\n",
-    "import miscellaneous_functions as MF\n",
-    "import mixed_plots as MP\n",
-    "import plotting_helpers as PH\n",
+    "import utils.miscellaneous_functions as MF\n",
+    "import plotting.mixed_plots as MP\n",
+    "import plotting.plotting_helpers as PH\n",
     "import variable_values_and_errors as val_err\n",
     "import load_sim\n",
     "import load_data\n",
-    "import map_functions as mapf\n",
-    "import coordinates"
+    "import plotting.map_functions as mapf\n",
+    "import utils.coordinates as coordinates"
    ]
   },
   {
